Media store in Azure supported
